# group-service

./: Makefile  README.md  group-generated.c  group-generated.h  group-list-generated.c  group-list-generated.h  group-server.c  group-server.h  group.c  group.h  group_server.c  main.c  meson.build  meson_options.txt  org.group.admin.list.xml  org.group.admin.xml  org.isoft.user.group.xml  server  tags  user-group-generated.c  user-group-generated.h
data/: group-admin-daemon.service.in  meson.build  org.group.admin.conf  org.group.admin.list.xml  org.group.admin.policy.in  org.group.admin.service.in  org.group.admin.xml
debian/: changelog  control
po/: POTFILES.in  fr.po  group-service.pot  zh_CN.po
src/: group-server.c  group-server.h  group.c  group.h  main.c  meson.build  tags  types.h  util.c  util.h
src/libaccountsservice/: act-user-enum-types.c.template  act-user-enum-types.h.template  act-user-manager.c  act-user-manager.h  act-user-private.h  act-user.c  act-user.h  act.h  gas-group-manage.c  gas-group-manage.h  gas-group.c  gas-group.h  gas.h  meson.build
src/libgroupservice/: gas-group-enum-types.c.template  gas-group-enum-types.h.template  gas-group-manager.c  gas-group-manager.h  gas-group-private.h  gas-group.c  gas-group.h  gas.h  meson.build  symbol.map  tags
test/: Makefile  main.c  meson.build
